# Distributed_Systems

./: .gitignore  CMakeLists.txt  README.md  ServerEndpoint.cpp  ServerEndpoint.h
client/: main.cpp
logs/: logs.txt
model/: AccountModel.cpp  AccountModel.h
server/: Logger.cpp  Logger.h  ServerEndpoint.cpp  ServerEndpoint.h
server/model/: AccountModel.cpp  AccountModel.h
server/service/: AccountService.cpp  AccountService.h
service/: AccountService.cpp  AccountService.h
socket/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketException.h
tests/src/: Main.kt
